--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,10 @@
                         <li class="mobo">
                             <a href={{i.external_link}}>{{i.title}}</a>
                         </li>
+                        {%elif i.external_link%}
+                        <li class="mobo">
+                            <a href={{i.external_link}}>{{i.title}}</a>
+                        </li>
                         {%endif%}
                         {%endfor%}
                         {% endif %}
@@ -53,6 +57,8 @@
                 <div class="menu_toggle">
                     <span></span>
                     <span></span>
+                    <span></span>
+
                 </div>
 
             </div>
@@ -220,7 +226,8 @@
                         <div class="team_box_items">
                             <div class="team_box">
                                 <div class="team_image">
-                                    <img src="{% static "Images/team.jpg" %}" />
+                                    <!--<img src="{% static "Images/team.jpg" %}" /> -->
+                                    <img src="{{card.image.url}}" />
                                 </div>
                             </div>
                             <div class="team_toggle">
@@ -240,15 +247,55 @@
                     </div>
                     {%endfor%}
                     {%endif%}
-
-
-
                 </div>
 
             </div>
         </div>
     </section>
     <!-- Team -->
+
+      <!-- Contact Us -->
+    <section id="contact">
+        <div class="global_margin">
+        <div class="container">
+            <div class="section_heading">
+                <h5>Contact Us</h5>
+            </div>
+            <div class="section_heading_big">
+                <h1>Contact Us</h1>
+            </div>
+            <div class="contact_container">
+                <div class="column_6">
+                    <div class="contact_image">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3589.5678303020413!2d28.230339614860164!3d-25.883697583581498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95663c34309625%3A0x1f2ab2de602f2ce2!2s323%20Broadbury%20Cir%2C%20Cornwall%20Hill%20Country%20Estate%2C%20Centurion%2C%200178!5e0!3m2!1sen!2sza!4v1631099433137!5m2!1sen!2sza" width="600" height="450" style="border:1;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                </div>
+                <div class="column_6">
+                    <div class="contact_form">
+                        <form method="post">
+                            <h1 class="getintouch hover-underline-animation">Get In Touch</h1>
+                            <br/>
+                            {% csrf_token %}
+                            {{form.as_p}}
+                            <br/>
+                            <div class="banner_button">
+                                <button type="submit">Submit</button>
+                                <br/>
+                                <br/>
+                                {% if messages %}
+                                    {% for message in messages %}
+                                        <div><strong>{{ message }}</strong></div>
+                                     {% endfor %}
+                                {% endif %}
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </div>
+    </section>
+    <!-- Contact Us -->
 
     <!-- Footer -->
     <footer id="footer">
@@ -289,7 +336,7 @@
                                             <a href="#team">Team</a>
                                         </li>
                                         <li>
-                                            <a href="#footer">Contact Us</a>
+                                            <a href="#contact">Contact Us</a>
                                         </li>
                                     </ul>
                                 </nav>
