--- a/static/css/main.css
+++ b/static/css/main.css
@@ -297,11 +297,6 @@ img {
     width: 23%;
 }
 
-
-button .banner_button .close-button {
-    padding: auto;
-}
-
 /* About */
 #about {
     position: relative;
@@ -484,7 +479,7 @@ button .banner_button .close-button {
 
 .contact_container {
     margin: 0 -12px;
-        display: 0;
+    display: flex;
     align-items: center;
     flex-flow: row wrap;
 }
@@ -694,20 +689,3 @@ input[type=text] {
     color: #fff;
     font-weight: 300;
 }
-
-
-#alert alert-success {
-    background-color: #28a745 !important;
-}
-
-#alert alert-error div {
-    background-color: #ff0000;
-}
-/*
-#alert alert-alert alert-success mb-0 alert-dismissible fade show {
-    background-color: #28a745 !important;
-}
-
-.alert alert-alert alert-success mb-0 alert-dismissible fade show {
-    background-color: #28a745 !important;
-} */
