--- a/templates/index.html
+++ b/templates/index.html
@@ -264,9 +264,13 @@
             <div class="section_heading_big">
                 <h1>Contact Us</h1>
             </div>
-            <div class="contact_container" style="text-align: center;" >
-
-               <!-- <div class="column-6 offset-3"> -->
+            <div class="contact_container">
+                <div class="column_6">
+                    <div class="contact_image">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3589.5678303020413!2d28.230339614860164!3d-25.883697583581498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95663c34309625%3A0x1f2ab2de602f2ce2!2s323%20Broadbury%20Cir%2C%20Cornwall%20Hill%20Country%20Estate%2C%20Centurion%2C%200178!5e0!3m2!1sen!2sza!4v1631099433137!5m2!1sen!2sza" width="600" height="450" style="border:1;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+                </div>
+                <div class="column_6">
                     <div class="contact_form">
                         <form method="post">
                             <h1 class="getintouch hover-underline-animation">Get In Touch</h1>
@@ -275,25 +279,18 @@
                             {{form.as_p}}
                             <br/>
                             <div class="banner_button">
-                                <button type="submit" id="submitButton">Submit</button>
+                                <button type="submit">Submit</button>
                                 <br/>
                                 <br/>
                                 {% if messages %}
-                                   {% for message in messages %}
-                                      <div class="container-fluid p-0">
-                                        <div class="alert alert-{{ message.tags }} mb-0 alert-dismissible text-center fade show" role="alert" id="{{ message.tags }}">
-                                            <strong>{{ message }} </strong>
-                                             <button type="button" class="close-button" data-dismiss="alert" aria-label="Close">
-                                                    <span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span>
-                                             </button>
-                                         </div>
-                                      </div>
-                                    {% endfor %}
+                                    {% for message in messages %}
+                                        <div><strong>{{ message }}</strong></div>
+                                     {% endfor %}
                                 {% endif %}
                             </div>
                         </form>
                     </div>
-               <!-- </div> -->
+                </div>
             </div>
             </div>
         </div>
@@ -483,7 +480,6 @@
         })
 
     })
-
 </script>
 
 </html>
