--- a/templates/index.html
+++ b/templates/index.html
@@ -264,13 +264,9 @@
             <div class="section_heading_big">
                 <h1>Contact Us</h1>
             </div>
-            <div class="contact_container">
-                <div class="column_6">
-                    <div class="contact_image">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3589.5678303020413!2d28.230339614860164!3d-25.883697583581498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95663c34309625%3A0x1f2ab2de602f2ce2!2s323%20Broadbury%20Cir%2C%20Cornwall%20Hill%20Country%20Estate%2C%20Centurion%2C%200178!5e0!3m2!1sen!2sza!4v1631099433137!5m2!1sen!2sza" width="600" height="450" style="border:1;" allowfullscreen="" loading="lazy"></iframe>
-                    </div>
-                </div>
-                <div class="column_6">
+            <div class="contact_container" style="align-items:center">
+
+
                     <div class="contact_form">
                         <form method="post">
                             <h1 class="getintouch hover-underline-animation">Get In Touch</h1>
@@ -290,7 +286,7 @@
                             </div>
                         </form>
                     </div>
-                </div>
+
             </div>
             </div>
         </div>
