--- a/static/css/main.css
+++ b/static/css/main.css
@@ -482,6 +482,8 @@ img {
     display: flex;
     align-items: center;
     flex-flow: row wrap;
+     width:100%;
+     justify-content: center;
 }
 
 .contact_image {
