clean up index header and copyright year

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="./Images/Banner_Image.jpg" />
-    <title>Great Usutu Website</title>
+    <title>Great Usutu</title>
     <link rel="stylesheet" href="{% static 'css/main.css'%}">
     <link rel="stylesheet" href="{% static 'css/responsive.css'%}">
 
@@ -426,10 +426,7 @@
             <div class="container">
                 <div class="detail">
                     <div class="text">
-                        <p>© 2020 All Rights Reserved By <a href="#">Great Usutu</a></p>
-                    </div>
-                    <div class="text">
-                        <p>Developed By <a href="www.manksdev.com">Manks Dev</a></p>
+                        <p>© 2021 All Rights Reserved By <a href="#">Great Usutu</a></p>
                     </div>
                 </div>
             </div>
