remove contact us form- spam

--- a/templates/index.html
+++ b/templates/index.html
@@ -256,32 +256,16 @@
             <div class="section_heading">
                 <h5>Contact Us</h5>
             </div>
-            <div class="section_heading_big">
-                <h1>Contact Us</h1>
-            </div>
+
             <div class="contact_container" style="align-items:center">
-
-
                     <div class="contact_form">
-                        <form method="post" style="text-align: center">
-                            <h1 class="getintouch hover-underline-animation" style="text-align: center">Get In Touch</h1>
+                            <h4>+27 (0) 12 051 3380</h4>
                             <br/>
-                            {% csrf_token %}
-                            {{form.as_p}}
-                            <br/>
-                            <div class="banner_button" style="text-align: center">
-                                <button type="submit" >Submit</button>
-                                <br/>
-                                <br/>
-                                {% if messages %}
-                                    {% for message in messages %}
-                                        <div><strong>{{ message }}</strong></div>
-                                     {% endfor %}
-                                {% endif %}
-                            </div>
-                        </form>
+                            <h4>5 Bauhinia Street</h4>
+                            <h4>Cambridge Office Park</h4>
+                            <h4>Highveld TechnoPark</h4>
+                            <h4>Centurion</h4>
                     </div>
-
             </div>
             </div>
         </div>
@@ -421,7 +405,7 @@
             <div class="container">
                 <div class="detail">
                     <div class="text">
-                        <p>© 2021 All Rights Reserved By <a href="#">Great Usutu</a></p>
+                        <p>© 2023 All Rights Reserved By <a href="#">Great Usutu</a></p>
                     </div>
                 </div>
             </div>
