--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="./Images/Banner_Image.jpg" />
-    <title>Great Usutu</title>
+    <title>Great Usutu Technologies</title>
     <link rel="stylesheet" href="{% static 'css/main.css'%}">
     <link rel="stylesheet" href="{% static 'css/responsive.css'%}">
 
 
-    <link rel="icon" href="{% static 'Images/logo.png' %}" />
-    <link rel="apple-touch-icon" href="{% static 'Images/logo.png' %}" />
+    <link rel="icon" href="{% static 'Images/GUTs Final_Logo_Final-small2.png' %}" />
+    <link rel="apple-touch-icon" href="{% static 'Images/GUTs Final_Logo_Final-small2.png' %}" />
 
 </head>
 
@@ -405,7 +405,7 @@
             <div class="container">
                 <div class="detail">
                     <div class="text">
-                        <p>© 2023 All Rights Reserved By <a href="#">Great Usutu</a></p>
+                        <p>© 2023 All Rights Reserved By <a href="#">Great Usutu Technologies</a></p>
                     </div>
                 </div>
             </div>
