change index footer year to 2024

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="{% static 'css/responsive.css'%}">
 
 
-    <link rel="icon" href="{% static 'Images/GUTs Final_Logo_Final-small2.png' %}" />
-    <link rel="apple-touch-icon" href="{% static 'Images/GUTs Final_Logo_Final-small2.png' %}" />
+    <link rel="icon" href="{% static 'Images/GUTs Final_Logo_Final_small2.png' %}" />
+    <link rel="apple-touch-icon" href="{% static 'Images/GUTs Final_Logo_Final_small2.png' %}" />
 
 </head>
 
@@ -405,7 +405,7 @@
             <div class="container">
                 <div class="detail">
                     <div class="text">
-                        <p>© 2023 All Rights Reserved By <a href="#">Great Usutu Technologies</a></p>
+                        <p>© 2024 All Rights Reserved By <a href="#">Great Usutu Technologies</a></p>
                     </div>
                 </div>
             </div>
