Team carousel first changes

--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -609,3 +609,18 @@
     max-width: 70vw;
   }
 }
+
+@media (min-width: 767px){
+    .carousel-control-next,
+    .carousel-control-prev {
+        margin: 0% -43% 0% 45%;
+    }
+}
+
+@media (max-width: 767px) {
+    .carousel-control-next,
+    .carousel-control-prev {
+        margin: 0% -40% 0% 42%;
+}
+
+}
