--- a/static/css/main.css
+++ b/static/css/main.css
@@ -434,6 +434,8 @@ img {
     margin: 25px 0 0px;
     font-size: 1.4rem;
     font-weight: 400;
+    text-align: center;
+
 }
 
 
@@ -447,6 +449,9 @@ img {
 
 .team_text p {
     color: #F36D21;
+    text-align: center;
+    margin-bottom: 5%;
+
 }
 
 .team_toggle {
@@ -478,8 +483,8 @@ img {
 }
 
 .team_image {
-    margin: 0 12px;
-    border: none;
+   border: 7px outset;
+   width: 95%;
 }
 
 /* Contact */
@@ -886,3 +891,26 @@ div.contact_form p > input, textarea{
   color: white;
   text-decoration: none;
 }
+
+.carousel .carousel-indicators li {background-color: #ddd;}
+.carousel .carousel-indicators li.active {background-color: #F36D21;}
+
+.carousel-caption{
+  opacity:0;
+  transition:500ms ease-in-out;
+  Background-color: #ddd;
+  margin-bottom: 15%;
+}
+
+.item:hover .carousel-caption{
+  opacity: 1;
+}
+
+.carousel-control-next,
+.carousel-control-prev  {
+    Background-color: #ddd;
+    border: 2px groove;
+    padding: 1%;
+    color: #51B1BF;
+    opacity: 1;
+    }
