--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,13 @@
     <link rel="stylesheet" href="{% static 'css/responsive.css'%}">
 
 
-    <link rel="icon" href="{% static 'Images/GUTs Final_Logo_Final_small2.png' %}" />
-    <link rel="apple-touch-icon" href="{% static 'Images/GUTs Final_Logo_Final_small2.png' %}" />
+
+    <link rel="icon" href="{% static 'Images/GUTs_Final_Logo_Final_small2.png' %}" />
+    <link rel="apple-touch-icon" href="{% static 'Images/GUTs_Final_Logo_Final_small2.png' %}" />
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </head>
 
@@ -211,41 +216,100 @@
                     </p>
                 </div>
 
-                <div class="team_boxes">
-                {%if cards_team %}
-                {% for card in cards_team %}
-                <div class="column_3 column_sm_6">
-                <div class="team_box_items">
-                <div class="card">
-                    <div class="team_box">
-                    <div class="team_image">
-                    <img src="{{card.image.url}}" class="card__image">
-                    </div>
-                    </div>
-                    <div class="card__overlay">
-                        <div class="team_heading">
-                            <h5>{{card.title}}</h5>
-                        </div>
-                        <div class="team_text">
-                            <p>{{card.text}}</p>
-                        </div>
-                        <p>{{card.team_member_description}}</p>
-                    </div>
-                    <div class="team_heading">
-                            <h5>{{card.title}}</h5>
-                        </div>
-                        <div class="team_text">
-                            <p>{{card.text}}</p>
-                        </div>
+                <div class="visible-xs">
+                  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                       <ol class="carousel-indicators">
+                           {% for card in cards_team %}
+                                <li data-target="#myCarousel" data-slide-to={{forloop.counter0}}  class="{% if forloop.first%}active{%endif%}"></li>
+                           {% endfor %}
+                        </ol>
+
+                       <div class="carousel-inner">
+                           <div class="item active">
+                           {% for card in cards_team %}
+                               <div class="col-xs-12">
+                                    <img src="{{card.image.url}}" alt="{{card.title}}" class="team_image">
+                                        <div class="carousel-caption">
+                                            <p>{{card.team_member_description}}</p>
+                                        </div>
+                                    <div class="team_heading">
+                                            <h5>{{card.text}}</h5>
+                                        </div>
+                                        <div class="team_text">
+                                            <p>{{card.title}}</p>
+                                        </div>
+                               </div>
+                            {% if forloop.counter|divisibleby:1 and not forloop.last%}
+                            </div>
+                            <div class="item">
+                                 {% endif %}
+                            {% endfor %}
+                            </div>
+                       </div>
+
+
+
+                       <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+                           <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                           <span class="sr-only">Previous</span>
+                       </a>
+                       <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+                           <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                           <span class="sr-only">Next</span>
+                       </a>
+
+
+                  </div>
                 </div>
+                <div class="hidden-xs">
+                  <div id="myCarousel2" class="carousel slide" data-ride="carousel">
+                       <ol class="carousel-indicators">
+                           {% for card in cards_team|slice:":4" %}
+                            <li data-target="#myCarousel2" data-slide-to={{forloop.counter0}}  class="{% if forloop.first%}active{%endif%}"></li>
+                           {% endfor %}
+                        </ol>
+
+                       <div class="carousel-inner">
+                           <div class="item active">
+                           {% for card in cards_team %}
+                               <div class="col-sm-6">
+                                    <img src="{{card.image.url}}" alt="{{card.title}}" class="team_image">
+                                        <div class="carousel-caption">
+                                            <p>{{card.team_member_description}}</p>
+                                        </div>
+                                    <div class="team_heading">
+                                            <h5>{{card.text}}</h5>
+                                        </div>
+                                        <div class="team_text">
+                                            <p>{{card.title}}</p>
+                                        </div>
+                               </div>
+                           {% if forloop.counter|divisibleby:2 and not forloop.last%}
+                            </div>
+                            <div class="item">
+                                 {% endif %}
+                            {% endfor %}
+                            </div>
+                       </div>
+
+
+                       <a class="carousel-control-prev" href="#myCarousel2" data-slide="prev">
+                           <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                           <span class="sr-only">Previous</span>
+                       </a>
+                       <a class="carousel-control-next" href="#myCarousel2" data-slide="next">
+                           <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                           <span class="sr-only">Next</span>
+                       </a>
+
+
+            </div>
                 </div>
-                </div>
-                {%endfor%}
-                {%endif%}
-</div>
 
             </div>
         </div>
+
+
     </section>
     <!-- Team -->
 
