replace phone no with email.

--- a/templates/index.html
+++ b/templates/index.html
@@ -259,7 +259,7 @@
 
             <div class="contact_container" style="align-items:center">
                     <div class="contact_form">
-                            <h4>+27 (0) 12 051 3380</h4>
+                            <h4>info@usutu.co.za</h4>
                             <br/>
                             <h4>5 Bauhinia Street</h4>
                             <h4>Cambridge Office Park</h4>
