Latest website, added partners and clients section

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,11 @@
 <html lang="en">
 
 <head>
+    <style>
+        .curved-image {
+    border-radius: 30px;
+}
+    </style>
 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"/>
@@ -159,7 +164,7 @@
             </div>
             <div class="about_container">
                 <div class="column_6">
-                    <div class="about_image">
+                    <div  class="about_image">
                         <img src={{template.about_image.url}}>
                     </div>
                 </div>
