--- a/static/css/main.css
+++ b/static/css/main.css
@@ -346,8 +346,12 @@ img {
 
 .about_image {
     margin: 0 12px;
+    border-radius: 30px;
 }
 
+.curved-image {
+    border-radius: 30px;
+}
 .about_text {
     margin: 0 12px;
 }
