--- a/templates/index.html
+++ b/templates/index.html
@@ -3,17 +3,6 @@
 <html lang="en">
 
 <head>
-    <style>
-        .curved-image {
-    border-radius: 30px;
-}
-    </style>
-
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"/>
-
-
-
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,6 +10,9 @@
     <title>Great Usutu Technologies</title>
     <link rel="stylesheet" href="static/css/main.css">
     <link rel="stylesheet" href="{% static 'css/responsive.css'%}">
+
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"/>
 
 
 
@@ -164,7 +156,7 @@
             </div>
             <div class="about_container">
                 <div class="column_6">
-                    <div  class="about_image">
+                    <div class="about_image">
                         <img src={{template.about_image.url}}>
                     </div>
                 </div>
@@ -454,6 +446,9 @@
                                         </li>
                                         <li>
                                             <a href="#services">Services</a>
+                                        </li>
+                                        <li>
+                                            <a href="#partners">Partners</a>
                                         </li>
                                         <li>
                                             <a href="#team">Team</a>
