--- a/templates/index.html
+++ b/templates/index.html
@@ -451,6 +451,9 @@
                                             <a href="#partners">Partners</a>
                                         </li>
                                         <li>
+                                            <a href="#clients">Clients Reviews</a>
+                                        </li>
+                                        <li>
                                             <a href="#team">Team</a>
                                         </li>
                                         <li>
